# poke_battle_logger

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Untitled.ipynb  config.py  extractorの挙動確認.ipynb  move_script.sh  pyproject.toml  streamlit_frame_debugger.py
.github/workflows/: build_and_push.yml  build_image_and_push_to_gar.yml  call-lint-test-job.yml  call-lint-test-server.yml  call-lint-test.yml  run-ci.yml
config/: config.py
data/: README.md  pokemon_name_multi_language.csv  pokemon_names.csv
docker/job/: Dockerfile
docker/server/: Dockerfile
experimental/: build_pokemon_images_for_metric_learning.py  config.json  id2name.csv  preprocessor_config.json
model/pokemon_image_faiss/: pokemon_faiss_index  pokemon_faiss_index_vector_index
notebook/: extractorの挙動確認.ipynb  faiss-pokemon-search-2.ipynb  faiss-pokemon-search.ipynb  get_pokemon_window.ipynb  huggingface_dataset_kakuninn.ipynb  train_test.ipynb  データ整形.ipynb  ポケモン選出画像を生成する.ipynb  対戦中のポケモン名抽出_tesseract検証.ipynb  日本語ロム用のアンカー画像を取得する.ipynb
poke_battle_logger/: cloud_batch_handler.py  firestore_handler.py  gcs_handler.py  sqlite_handler.py  types.py  utils.py
poke_battle_logger/api/: app.py  poke_battle_extractor.py  pokemon_battle_extractor.py
poke_battle_logger/batch/: build_pokemon_faiss_index.py  data_builder.py  extract_data.py  extract_data_streamling.py  extractor.py  frame_compressor.py  frame_detector.py  openai_handler.py  pokemon_battle_extractor.py  pokemon_battle_extractor2.py  pokemon_extractor.py  pokemon_name_window_extractor.py
poke_battle_logger/database/: database_handler.py
poke_battle_logger/database/sql/: battle_summary.sql  fainted_log.sql  in_battle_message_full_log.sql  in_battle_message_log.sql  opponent_pokemon_defeat_summary.sql  opponent_pokemon_defeat_summary_in_season.sql  opponent_pokemon_stats_summary_in_season.sql  your_pokemon_defeat_summary.sql  your_pokemon_defeat_summary_in_season.sql
poke_battle_logger/email_templates/: extract_fail.html  extract_fail_unknown_pokemons.html  extract_success.html
poke_battle_logger/job_api/: app.py  pokemon_battle_extractor.py
poke_battle_logger/poke_battle_logger_vis/: README.md  next.config.js  package-lock.json  package.json
poke_battle_logger/poke_battle_logger_vis/.next/cache/webpack/client-development/: 0.pack  index.pack
poke_battle_logger/poke_battle_logger_vis/.next/cache/webpack/server-development/: 12.pack_  13.pack_  6.pack_
poke_battle_logger/poke_battle_logger_vis/components/atoms/: MobileNav.tsx  pokemon-icon.tsx
poke_battle_logger/poke_battle_logger_vis/components/data-display/: battle-log-card.tsx  battle-log-detail-model.tsx  data-table.tsx  in-battle-timeline.tsx  poke-stat-group.tsx  transition-chart.tsx  win-rate-chart.tsx
poke_battle_logger/poke_battle_logger_vis/components/layouts/: layout.tsx  sidebar.tsx
poke_battle_logger/poke_battle_logger_vis/pages/: _app.tsx  analytics.tsx  index.tsx
poke_battle_logger/poke_battle_logger_vis/pages/analytics/: index.tsx
poke_battle_logger/poke_battle_logger_vis/pages/api/: check_video_format.ts  get_next_rank_transition.ts  get_opponent_pokemon_stats_summary.ts  get_recent_summary.ts  get_win_rate_transition.ts  get_your_pokemon_stats_summary.ts
poke_battle_logger/poke_battle_logger_vis/pages/battle_log/: index.tsx
poke_battle_logger/poke_battle_logger_vis/pages/components/: sidebar.tsx
poke_battle_logger/poke_battle_logger_vis/pages/components/atoms/: NavItem.tsx
poke_battle_logger/poke_battle_logger_vis/pages/components/data-display/: poke-stat-group.tsx  win-rate-chart.tsx
poke_battle_logger/poke_battle_logger_vis/pages/components/layouts/: layout.tsx  sidebar.tsx
poke_battle_logger/poke_battle_logger_vis/pages/login/: index.tsx
poke_battle_logger/poke_battle_logger_vis/pages/process_video/: index.tsx
poke_battle_logger/stream/: __init__.py  frame_capture.py  live_battle_analyzer.py  live_processor.py
poke_battle_logger_vis/: .prettierrc.js  next.config.js  package.json  tailwind.config.js  util.ts
poke_battle_logger_vis/components/atoms/: MobileNav.tsx  NavItem.tsx  pokemon-icon.tsx
poke_battle_logger_vis/components/data-display/: battle-log-card.tsx  battle-log-detail-model.tsx  data-table.tsx  in-battle-timeline.tsx  poke-stat-group.tsx  pokemon-knock-out-data-table.tsx  pokemon-selection-data-table.tsx  transition-chart.tsx
poke_battle_logger_vis/components/layouts/: layout.tsx  sidebar.tsx
poke_battle_logger_vis/components/navigation/: pagination-controller.tsx
poke_battle_logger_vis/components/ui/: chart.tsx  dialog.tsx  radio-group.tsx  sheet.tsx  sidebar.tsx  timeline.tsx  toast.tsx
poke_battle_logger_vis/emails/: fail_extract_video.tsx  fail_extract_video_unknown_pokemons.tsx  index.tsx  notify_extract_video.tsx
poke_battle_logger_vis/helper/: axios.ts  getImageURLClient.ts  getImageURLFromGCS.ts  listUnknownPokemonImages.ts  listUnknownPokemonNameWindowImages.ts  pokemonJapaneseToEnglishDict.ts
poke_battle_logger_vis/pages/: _app.tsx  index.tsx  util.ts
poke_battle_logger_vis/pages/analytics/: index.tsx
poke_battle_logger_vis/pages/annotate_pokemon_images/: index.tsx
poke_battle_logger_vis/pages/api/: check_video_format.ts  getImageUrl.ts  get_battle_video_detail_status_log.ts  get_in_battle_fainted_log.ts  get_in_battle_message_full_log.ts  get_in_battle_message_log.ts  get_recent_summary.ts  get_seasons.ts  get_trainer_id_in_DB.ts  get_video_process_status.ts  hello.ts  set_label_to_unknown_pokemon_images.ts  set_label_to_unknown_pokemon_name_window_images.ts  unknown_pokemon_images.ts  unknown_pokemon_name_window_images.ts
poke_battle_logger_vis/pages/battle_log/: index.tsx
poke_battle_logger_vis/pages/login/: index.tsx
poke_battle_logger_vis/pages/process_video/: index.tsx
poke_battle_logger_vis/types/: react-chrono.d.ts
scripts/: run_extractor.py
sql/: opponent_pokemon_stats_summary.sql  opponent_pokemon_stats_summary_in_season.sql  your_pokemon_stats_summary.sql  your_pokemon_stats_summary_in_season.sql
tests/: test_pokemon_extractor.py  test_pokemon_name_window_extractor.py
