[tool.poetry]
name = "poke_battle_logger"
version = "0.1.0"
description = ""
authors = ["fufufukakaka"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.2.4"
numpy = "^1.20.2"
opencv-python = "^4.7.0.72"
tqdm = "^4.64.1"
yt-dlp = "^2023.2.17"
rich = "^13.3.1"
faiss-cpu = "^1.7.3"
google-cloud-vision = "^3.4.0"
pytube = "^12.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
