[tool.poetry]
name = "poke_battle_logger"
version = "0.1.0"
description = ""
authors = ["fufufukakaka"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^1.2.4"
rich = "^13.3.1"
peewee = "^3.16.0"
uvicorn = "^0.20.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
google-cloud-storage = "^2.9.0"
google-cloud-firestore = "^2.11.1"
httpx = "^0.24.1"
google-cloud-batch = "^0.16.0"
tenacity = "^8.2.3"
scipy = "^1.13.0"
resend = "^2.4.0"
yt-dlp = "^2024.8.6"
tf-keras = "^2.18.0"
scikit-learn = "^1.5.2"
torchvision = "^0.20.1"
pyarrow-hotfix = "^0.6"
accelerate = "^1.1.1"
python-multipart = "^0.0.19"
websockets = "^12.0"
mss = "^9.0.1"
asyncio-mqtt = "^0.16.2"
fastapi = "^0.116.1"
langchain = "^0.3.26"
langchain-openai = "^0.3.28"
importlib-metadata = ">=4.6.0,<5.0.0"
streamlit = "^1.49.1"

[tool.poetry.group.job]
optional = true

[tool.poetry.group.job.dependencies]
numpy = "^1.20.2"
opencv-python = "^4.7.0.72"
tqdm = "^4.64.1"
pytube = "^12.1.2"
pytesseract = "^0.3.10"
click = "^8.1.3"
cloudpickle = "^2.2.1"
editdistance = "^0.8.1"
transformers = "^4.42.0"
datasets = "^2.11.0"
huggingface-hub = "^0.23.2"
torch = "^2.0.0"
setuptools = "^68.0.0"
keras = "^3.3.3"
tensorflow = "^2.16.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
pytest = "^7.3.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^1.4.1"
ipython = "^8.14.0"
ipykernel = "^6.25.1"
notebook = "^7.0.4"
jupyterlab = "^4.0.6"
ipywidgets = "^8.1.1"
flake8 = "^7.3.0"

[[tool.poetry.source]]
name = "default"
url = "https://pypi.python.org/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '^poke_battle_logger/.*'
exclude = '^(?!poke_battle_logger/).*'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["poke_battle_logger"]
skip_glob = ["!poke_battle_logger/**"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "poke_battle_logger.*"
strict = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E231", "E501", "W503"]
exclude = [".venv", "__pycache__", ".git", "*.egg-info"]
select = ["B", "B950", "C", "E", "F", "W"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
